Основная реализация веб-скрейпера

--- a/WebScrapingProject/WebScrapingProject.csproj
+++ b/WebScrapingProject/WebScrapingProject.csproj
@@ -18,4 +18,10 @@
     <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="HTML/corrupted-news.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
