--- a/WebScrapingProject/WebScrapingProject.csproj
+++ b/WebScrapingProject/WebScrapingProject.csproj
@@ -22,6 +22,9 @@
     <None Update="HTML/corrupted-news.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="HTML/clean-news_test.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
